# linkura-localify

./: .gitignore  .gitmodules  README.md  settings.gradle
.github/: release_template.md
.github/workflows/: build.yml  experiment-release.yaml  release.yaml  release_template.md
app/: build.gradle  proguard-rules.pro
app/libs/: convert_keystore.py  make_lspatch_cleaned_steps.txt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: about_contributors_en.json  about_contributors_es.json  about_contributors_ko.json  about_contributors_th.json  about_contributors_zh_cn.json  about_contributors_zh_tw.json  xposed_init
app/src/main/cpp/: CMakeLists.txt  libHasuKikaisann.cpp  platformDefine.hpp
app/src/main/cpp/GakumasLocalify/: Hook.cpp  Il2cppUtils.hpp  Local.cpp  MasterLocal.cpp  MasterLocal_Legacy.cpp  MasterLocal_Legacy.h  Misc.cpp  Misc.hpp
app/src/main/cpp/GakumasLocalify/camera/: camera.cpp
app/src/main/cpp/GakumasLocalify/config/: Config.cpp  Config.hpp
app/src/main/cpp/LinkuraLocalify/: Hook.cpp  Hook.h  HookMain.h  Il2cppUtils.hpp  JniBridge.h  Local.cpp  Local.h  Log.cpp  Log.h  MasterLocal.cpp  MasterLocal.h  Misc.cpp  Misc.hpp  Plugin.cpp  Plugin.h  UnityAssetHelper.hpp
app/src/main/cpp/LinkuraLocalify/camera/: baseCamera.cpp  baseCamera.hpp  camera.cpp  camera.hpp
app/src/main/cpp/LinkuraLocalify/config/: Config.cpp  Config.hpp  test_version_compatibility.cpp  version_compatibility.cpp  version_compatibility.h
app/src/main/cpp/LinkuraLocalify/hooks/: HookCamera.cpp  HookDebug.cpp  HookLiveRender.cpp  HookShare.cpp  HookStory.cpp  HookTranslation.cpp
app/src/main/cpp/LinkuraLocalify/http-mock/: .gitignore  HttpMock.cpp  HttpMock.hpp  RouteRegistry.cpp  RouteRegistry.hpp
app/src/main/cpp/LinkuraLocalify/http-mock/backend/: HttpMockBackend.cpp  HttpMockBackend.hpp
app/src/main/cpp/LinkuraLocalify/http-mock/backend/schema/: 001_init.sql
app/src/main/cpp/LinkuraLocalify/http-mock/backend/seed/: 001_init.sql
app/src/main/cpp/LinkuraLocalify/http-mock/backend/tools/: README.md  generate_all.py  generate_archive_detail_sql.py  generate_card_detail_sql.py  generate_character_info_sql.py  generate_custom_setting.py  generate_daily_quest_stage_sql.py  generate_deck_sql.py  generate_dream_quest_stage_sql.py  generate_grade_quest_sql.py  generate_grand_prix_sql.py  generate_home_get_home.py  generate_learning_stage_sql.py  generate_music_list.py  generate_music_mastery_sql.py  generate_music_sql.py  generate_quest_stage_sql.py  generate_rhythm_game_sql.py  generate_sticker_list.py  generate_user_items.py  sql_utils.py
app/src/main/cpp/LinkuraLocalify/http-mock/backend/tools/template/: home_get_home.json  profile_info.json
app/src/main/cpp/LinkuraLocalify/http-mock/builtin/: account_connect.json  activity_record_get_top.json  activity_record_play_adv_data.json  archive_get_archive_list.json  archive_get_home.json  collection_get_gallary_list.json  collection_get_music_list.json  collection_get_sticker_list.json  default.headers  follow_live_chat_group_list.json  get_custom_setting.json  home_get_home.json  out_quest_live_daily_get_stage_select.json  out_quest_live_get_quest_top.json  profile_get_mute_list.json  step_up_beginner_mission_get_list.json  user_card_get_list.json  user_items_get_list.json  user_login.headers  user_login.json  user_login_new.json
app/src/main/cpp/LinkuraLocalify/string_parser/: StringParser.cpp
app/src/main/cpp/cmake/: generate_builtin_json_header.cmake  generate_builtin_sql_header.cmake
app/src/main/java/io/github/chinosk/gakumas/localify/: ActivityExtends.kt  ConfigUpdateListener.kt  GakumasHookMain.kt  PatchActivity.kt
app/src/main/proto/: linkura_messages.proto
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-th/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
doc/en/: README.md  simulator.md
doc/jp/: README.md  simulator.md
doc/zh/: README.md  simulator.md
gradle/: libs.versions.toml
(+99 files in other folders)
